fix: add color for FROZEN and COLLAPSE icon

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -95,6 +95,12 @@ $weight-bold: 600;
   }
 }
 
+.COLLAPSED, .FROZEN {
+  .status .fa {
+    color: $sd-text-light;
+  }
+}
+
 .no-padding {
   padding: 0 !important;
 }
